Reset captchouli CAPTCHA selections on page refresh

--- a/templates/post-base.html
+++ b/templates/post-base.html
@@ -51,7 +51,7 @@
 				{% endif %}
 				<div class="col flex-grow-0">
 					<label>
-						<input type="checkbox" class="captchouli-checkbox" name="{{ image_name }}">
+						<input type="checkbox" class="captchouli-checkbox" name="{{ image_name }}" autocomplete="off">
 						<img class="captchouli-img" draggable="false" src="{{ image_data }}">
 					</label>
 				</div>
