Add support for CAPTCHA cooldown

--- a/templates/post-base.html
+++ b/templates/post-base.html
@@ -35,43 +35,47 @@
 			the rules to see what kind of files can be uploaded.</small>
     </div>
     <input type="hidden" name="{{ hidden_name }}" value="{{ hidden_value }}">
-	{% if config["CAPTCHA_METHOD"] == "CAPTCHOULI" %}
-		{% set captchouli_ns = namespace(captcha=get_captchouli()) %}
-		<input type="hidden" name="captchouli-id" value="{{ captchouli_ns.captcha["captcha_id"] }}">
-		<details>
-			<summary>
-				<small class="text-muted">Select all images of <b>{{ captchouli_ns.captcha["character"] }}</b></small>
-			</summary>
-			{% for image_name, image_data in captchouli_ns.captcha.images.items() %}
-				{% if loop.index0 % 3 == 0 %}
-					{% if loop.first == False %}
+	{% if on_captcha_cooldown() == False %}
+		{% if config["CAPTCHA_METHOD"] == "CAPTCHOULI" %}
+			{% set captchouli_ns = namespace(captcha=get_captchouli()) %}
+			<input type="hidden" name="captchouli-id" value="{{ captchouli_ns.captcha["captcha_id"] }}">
+			<details>
+				<summary>
+					<small class="text-muted">Select all images of <b>{{ captchouli_ns.captcha["character"] }}</b></small>
+				</summary>
+				{% for image_name, image_data in captchouli_ns.captcha.images.items() %}
+					{% if loop.index0 % 3 == 0 %}
+						{% if loop.first == False %}
 	</div>
+						{% endif %}
+						<div class="row">
 					{% endif %}
-		<div class="row">
-				{% endif %}
-				<div class="col flex-grow-0">
-					<label>
-						<input type="checkbox" class="captchouli-checkbox" name="{{ image_name }}" autocomplete="off">
-						<img class="captchouli-img" draggable="false" src="{{ image_data }}">
-					</label>
-				</div>
-			{% endfor %}
-		</div>
-		</details>
+					<div class="col flex-grow-0">
+						<label>
+							<input type="checkbox" class="captchouli-checkbox" name="{{ image_name }}" autocomplete="off">
+							<img class="captchouli-img" draggable="false" src="{{ image_data }}">
+						</label>
+					</div>
+				{% endfor %}
+						</div>
+			</details>
+		{% endif %}
 	{% endif %}
     {% if embed_submit %}
 		<button type="submit" class="btn btn-primary">Submit</button>
     {% endif %}
-	{% if config["CAPTCHA_METHOD"] == "RECAPTCHA" %}
-		<input type="hidden" name="recaptcha-token" id="recaptcha-token" value="">
-		<script src="https://www.google.com/recaptcha/api.js?render={{ config["RECAPTCHA_SITE_KEY"] }}"></script>
-		<script>
-		 grecaptcha.ready(function() {
-			 grecaptcha.execute('{{ config["RECAPTCHA_SITE_KEY"] }}', {action: 'post'}).then(function(token) {
-				 $("#recaptcha-token").val(token);
+	{% if on_captcha_cooldown() == False %}
+		{% if config["CAPTCHA_METHOD"] == "RECAPTCHA" %}
+			<input type="hidden" name="recaptcha-token" id="recaptcha-token" value="">
+			<script src="https://www.google.com/recaptcha/api.js?render={{ config["RECAPTCHA_SITE_KEY"] }}"></script>
+			<script>
+			 grecaptcha.ready(function() {
+				 grecaptcha.execute('{{ config["RECAPTCHA_SITE_KEY"] }}', {action: 'post'}).then(function(token) {
+					 $("#recaptcha-token").val(token);
+				 });
 			 });
-		 });
-		</script>
+			</script>
+		{% endif %}
 	{% endif %}
 </form>
 {% endmacro %}
