--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 </nav>
 {% with flashes = get_flashed_messages() %}
 {% if flashes %}
-<div class="container" style="padding:6%">
+<div class="container">
     {% for message in flashes %}
     <div class="alert alert-primary">
         {{ message }}
