--- a/scss/base/post.scss
+++ b/scss/base/post.scss
@@ -4,7 +4,7 @@
 }
 
 .post-container:nth-child(odd) {
-	@extend .bg-light;
+	background-color: #e7e7e7;
 }
 .post-container:nth-child(even) {
 	@extend .bg-white;
