--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="{{ static_resource("css/maniwani.css") }}">
+	<link rel="stylesheet" href="{{ get_current_theme_path() }}">
     <script src="{{ static_resource("jquery/jquery.min.js") }}"></script>
     <script src="{{ static_resource("popperjs/umd/popper.min.js") }}"></script>
     <script src="{{ static_resource("bootstrap/bootstrap.min.js") }}"></script>
@@ -16,7 +16,7 @@
     <title>{{ instance_name() }} - {% block title %}{% endblock %}</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top mb-2">
+<nav class="navbar navbar-expand-lg sticky-top mb-2">
     <a class="navbar-brand" href="{{ url_for("main.index") }}">{{ instance_name() }}</a>
     <script>
 			 document.write('<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#site-nav"> \
@@ -63,6 +63,20 @@
 {% endwith %}
 {% block content %}{% endblock %}
 <hr>
+<div class="theme-selector">
+	<form method="post" enctype="multipart/form-data" action="{{ url_for("theme.set_theme") }}">
+		<select name="selected-theme">
+			{% for theme_name in get_themes() %}
+				{% if theme_name == get_current_theme() %}
+					<option value="{{ theme_name }}" selected="selected">{{ theme_name }}</option>
+				{% else %}
+					<option value="{{ theme_name }}">{{ theme_name }}</option>
+				{% endif %}
+			{% endfor %}
+		</select>
+		<button id="theme-submit" type="submit" class="btn btn-primary">Select theme</button>
+	</form>
+</div>
 <div class="container-fluid">
     {% block footer %}{% endblock %}
     <p class="text-center text-muted">
