Add functionality to move threads to a different board

--- a/scss/base/styling.scss
+++ b/scss/base/styling.scss
@@ -22,3 +22,10 @@
 blockquote {
 	color: var(--green);
 }
+.mod-item {
+	display: block;
+	@extend .w-100;
+	@extend .my-1;
+	@extend .badge;
+	@extend .badge-primary;
+}
