Calculate reply URLs in parallel

--- a/templates/thread.html
+++ b/templates/thread.html
@@ -65,7 +65,7 @@
 	<div class="container" id="thread-container">
 		{% for post in posts %}
 			{% import "post-view.html" as post_view %}
-			{{ post_view.render_post(post, thread_id, loop.first) }}
+			{{ post_view.render_post(post, thread_id, loop.first, reply_urls) }}
 		{% endfor %}
 		<a href="#" id="thread-bottom" name="thread-bottom"></a>
 		<script>
