--- a/templates/post-view.html
+++ b/templates/post-view.html
@@ -1,4 +1,4 @@
-{% macro render_post(post, thread_id, is_op) %}
+{% macro render_post(post, thread_id, is_op, reply_urls) %}
 	<div class="post-container" id="{{ post["id"] }}">
 		{% if post["media"] %}
 			<div class="col">
@@ -116,7 +116,7 @@
 						<small class="text-secondary">Replies:</small>
 						<div class="post-replies">
 							{% for reply in post["replies"] %}
-								<a class="badge badge-secondary post-reply" href="{{ url_for_post(reply) }}" data-post-id="{{ reply }}" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<i>Loading...</i>" data-loaded="false">&gt;&gt;{{ reply }} </a>
+								<a class="badge badge-secondary post-reply" href="{{ reply_urls[reply] }}" data-post-id="{{ reply }}" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<i>Loading...</i>" data-loaded="false">&gt;&gt;{{ reply }} </a>
 							{% endfor %}
 						</div>
 					</div>
