--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,5 @@
 	</div>
 {% endif %}
 {% import "catalog-view.html" as catalog_view with context %}
-{{ catalog_view.catalog_view(threads, True) }}
+{{ catalog_view.catalog_view(threads, tag_styles, True) }}
 {% endblock %}
