Begin rework of UI to use React

--- a/scss/base/post.scss
+++ b/scss/base/post.scss
@@ -17,3 +17,11 @@
 .post-replies {
 	display: inline;
 }
+
+.thread-thumbnail {
+	@extend .img-thumbnail;
+	display: inline-block;
+	overflow: hidden;
+	max-width: 15em;
+	max-height: 20em;
+}
