Port thread gallery to React

--- a/scss/themes/wildride/theme-wildride.scss
+++ b/scss/themes/wildride/theme-wildride.scss
@@ -99,6 +99,7 @@ $theme-colors: (
 	"light": rgba(255,255,255,.1)
 );
 @import "bootstrap";
+@import "media-grid";
 @import "navbar";
 @import "styling";
 @import "catalog";
