--- a/scss/themes/harajuku/theme-harajuku.scss
+++ b/scss/themes/harajuku/theme-harajuku.scss
@@ -6,6 +6,7 @@ $theme-colors: (
 $navbar-light-color: rgba(#0000, .8);
 $navbar-light-hover-color: rgba(#0000, .9);
 @import "bootstrap";
+@import "media-grid";
 @import "catalog";
 @import "post";
 @import "styling";
