Port board index to React

--- a/scss/themes/harajuku/theme-harajuku.scss
+++ b/scss/themes/harajuku/theme-harajuku.scss
@@ -7,6 +7,7 @@ $navbar-light-color: rgba(#0000, .8);
 $navbar-light-hover-color: rgba(#0000, .9);
 @import "bootstrap";
 @import "media-grid";
+@import "board-index";
 @import "catalog";
 @import "post";
 @import "styling";
