--- a/scss/themes/wildride/theme-wildride.scss
+++ b/scss/themes/wildride/theme-wildride.scss
@@ -100,6 +100,7 @@ $theme-colors: (
 );
 @import "bootstrap";
 @import "media-grid";
+@import "board-index";
 @import "navbar";
 @import "styling";
 @import "catalog";
