Don't use !important for nth-child so theme colors render properly

--- a/scss/base/post.scss
+++ b/scss/base/post.scss
@@ -7,11 +7,11 @@
 	background-color: #e7e7e7;
 }
 .post-container:nth-child(even) {
-	@extend .bg-white;
+	background-color: var(--white);
 }
 
 .reply-container {
-	@extend .bg-white;
+	background-color: var(--white);
 }
 
 .post-replies {
