--- a/scss/themes/harajuku/theme-harajuku.scss
+++ b/scss/themes/harajuku/theme-harajuku.scss
@@ -9,6 +9,7 @@ $navbar-light-hover-color: rgba(#0000, .9);
 @import "media-grid";
 @import "board-index";
 @import "catalog";
+@import "../../base/post";
 @import "post";
 @import "styling";
 @import "captchouli";
