--- a/templates/react-board-index.html
+++ b/templates/react-board-index.html
@@ -3,7 +3,7 @@
 	board index
 {% endblock %}
 {% block content %}
-	<div class="container-fluid">
+	<div class="container">
 		TEMPLATE_CONTENT
 	</div>
 {% endblock %}
