--- a/templates/react-new-post.html
+++ b/templates/react-new-post.html
@@ -3,7 +3,7 @@
 	reply to thread
 {% endblock %}
 {% block navbar %}
-	<a href="{{ url_for("threads.view", thread_id=thread_id) }}" class="nav-item nav-link">Back to thread</a>
+	<a href="{{ url_for("threads.view", thread_id=thread_id) }}" class="navbar-link">Back to thread</a>
 {% endblock %}
 {% block content %}
 	<div class="container">
