Add margins to media-grid, invert background and foreground colors

--- a/scss/base/media-grid.scss
+++ b/scss/base/media-grid.scss
@@ -3,6 +3,8 @@
 	justify-content: center;
 	grid-gap: 30px;
 	grid-template-columns: repeat(auto-fill, 313px);
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .media-element {
