--- a/scss/base/catalog.scss
+++ b/scss/base/catalog.scss
@@ -19,6 +19,8 @@
 	display: grid;
 	grid-gap: 90px;
 	grid-template-columns: repeat(auto-fill, 300px);
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .catalog-media-container {
 	position: relative;
