Begin work on Ashita theme

--- a/scss/base/forms.scss
+++ b/scss/base/forms.scss
@@ -11,3 +11,17 @@
 .form-group > [type="file"] {
 	display: block;
 }
+
+.modal {
+	position: absolute;
+	inset: 40px;
+	overflow: auto;
+	border-radius: 4px;
+	outline: currentcolor none medium;
+	padding: 20px;
+}
+
+.modal-overlay {
+	position: fixed;
+	inset: 0px;
+}
